// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelGraphCard Component should render a non-connected component: non-connected 1`] = `
<RhelGraphCard
  endDate={2019-07-20T23:59:59.999Z}
  error={false}
  fulfilled={false}
  getGraphReports={[Function]}
  graphData={
    Object {
      "usage": Array [],
    }
  }
  pending={false}
  startDate={2019-06-20T00:00:00.000Z}
  t={[Function]}
>
  <Card
    className="curiosity-usage-graph fadein"
  >
    <article
      className="pf-c-card curiosity-usage-graph fadein"
    >
      <CardHead>
        <div
          className="pf-c-card__head"
        >
          <h2>
            Daily CPU socket usage
          </h2>
          <CardActions>
            <div
              className="pf-c-card__actions"
            >
              <Label
                className="curiosity-usage-graph-label"
              >
                <span
                  className="pf-c-label curiosity-usage-graph-label"
                >
                  Last 30 Days
                </span>
              </Label>
            </div>
          </CardActions>
        </div>
      </CardHead>
      <CardBody>
        <div
          className="pf-c-card__body"
        >
          <div
            className="curiosity-skeleton-container"
          />
        </div>
      </CardBody>
    </article>
  </Card>
</RhelGraphCard>
`;

exports[`RhelGraphCard Component should render multiple states: error shows zeroed bar values 1`] = `
Object {
  "chartBarData": Array [
    Object {
      "label": "5 sockets on Jun 1",
      "x": "Jun 1",
      "y": 5,
    },
    Object {
      "label": "0 sockets on Jun 2
 -5 from previous day",
      "x": "Jun 2",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 3",
      "x": "Jun 3",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 4",
      "x": "Jun 4",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 5",
      "x": "Jun 5",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 6",
      "x": "Jun 6",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 7",
      "x": "Jun 7",
      "y": 0,
    },
    Object {
      "label": "7 sockets on Jun 8
 +7 from previous day",
      "x": "Jun 8",
      "y": 7,
    },
    Object {
      "label": "0 sockets on Jun 9
 -7 from previous day",
      "x": "Jun 9",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 10",
      "x": "Jun 10",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 11",
      "x": "Jun 11",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 12",
      "x": "Jun 12",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 13",
      "x": "Jun 13",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 14",
      "x": "Jun 14",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 15",
      "x": "Jun 15",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 16",
      "x": "Jun 16",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 17",
      "x": "Jun 17",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 18",
      "x": "Jun 18",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 19",
      "x": "Jun 19",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 20",
      "x": "Jun 20",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 21",
      "x": "Jun 21",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 22",
      "x": "Jun 22",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 23",
      "x": "Jun 23",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 24",
      "x": "Jun 24",
      "y": 0,
    },
    Object {
      "label": "3 sockets on Jun 25
 +3 from previous day",
      "x": "Jun 25",
      "y": 3,
    },
    Object {
      "label": "0 sockets on Jun 26
 -3 from previous day",
      "x": "Jun 26",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 27",
      "x": "Jun 27",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 28",
      "x": "Jun 28",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 29",
      "x": "Jun 29",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 30",
      "x": "Jun 30",
      "y": 0,
    },
  ],
}
`;

exports[`RhelGraphCard Component should render multiple states: fulfilled 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      Daily CPU socket usage
    </h2>
    <CardActions>
      <Label
        className="curiosity-usage-graph-label"
      >
        Last 30 Days
      </Label>
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="curiosity-skeleton-container"
    >
      <Chart
        domain={
          Object {
            "x": Array [
              0,
              31,
            ],
            "y": Array [
              0,
              10,
            ],
          }
        }
        domainPadding={
          Object {
            "x": Array [
              30,
              25,
            ],
          }
        }
        height={275}
        padding={
          Object {
            "bottom": 75,
            "left": 50,
            "right": 50,
            "top": 50,
          }
        }
        width={0}
      >
        <ChartAxis
          fixLabelOverlap={true}
          tickValues={
            Array [
              "Jun 1",
              "Jun 6",
              "Jun 11",
              "Jun 16",
              "Jun 21",
              "Jun 26",
            ]
          }
        />
        <ChartAxis
          dependentAxis={true}
          showGrid={true}
        />
        <ChartStack>
          <ChartBar
            data={
              Array [
                Object {
                  "label": "5 sockets on Jun 1",
                  "x": "Jun 1",
                  "y": 5,
                },
                Object {
                  "label": "0 sockets on Jun 2
 -5 from previous day",
                  "x": "Jun 2",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 3",
                  "x": "Jun 3",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 4",
                  "x": "Jun 4",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 5",
                  "x": "Jun 5",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 6",
                  "x": "Jun 6",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 7",
                  "x": "Jun 7",
                  "y": 0,
                },
                Object {
                  "label": "7 sockets on Jun 8
 +7 from previous day",
                  "x": "Jun 8",
                  "y": 7,
                },
                Object {
                  "label": "0 sockets on Jun 9
 -7 from previous day",
                  "x": "Jun 9",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 10",
                  "x": "Jun 10",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 11",
                  "x": "Jun 11",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 12",
                  "x": "Jun 12",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 13",
                  "x": "Jun 13",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 14",
                  "x": "Jun 14",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 15",
                  "x": "Jun 15",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 16",
                  "x": "Jun 16",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 17",
                  "x": "Jun 17",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 18",
                  "x": "Jun 18",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 19",
                  "x": "Jun 19",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 20",
                  "x": "Jun 20",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 21",
                  "x": "Jun 21",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 22",
                  "x": "Jun 22",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 23",
                  "x": "Jun 23",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 24",
                  "x": "Jun 24",
                  "y": 0,
                },
                Object {
                  "label": "3 sockets on Jun 25
 +3 from previous day",
                  "x": "Jun 25",
                  "y": 3,
                },
                Object {
                  "label": "0 sockets on Jun 26
 -3 from previous day",
                  "x": "Jun 26",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 27",
                  "x": "Jun 27",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 28",
                  "x": "Jun 28",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 29",
                  "x": "Jun 29",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 30",
                  "x": "Jun 30",
                  "y": 0,
                },
              ]
            }
            labelComponent={<ChartTooltip />}
          />
        </ChartStack>
      </Chart>
    </div>
  </CardBody>
</Card>
`;

exports[`RhelGraphCard Component should render multiple states: pending 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      Daily CPU socket usage
    </h2>
    <CardActions>
      <Label
        className="curiosity-usage-graph-label"
      >
        Last 30 Days
      </Label>
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="curiosity-skeleton-container"
    >
      <Skeleton
        size="xs"
      />
      <Skeleton
        size="sm"
      />
      <Skeleton
        size="md"
      />
      <Skeleton
        size="lg"
      />
    </div>
  </CardBody>
</Card>
`;
